--- a/src/style/style.css
+++ b/src/style/style.css
@@ -111,6 +111,7 @@ header nav ul li .nav-link {
 .input-form form label {
   font-size: 32px;
   font-weight: 400;
+  margin-top: 30px;
 }
 
 .input-form form input {
@@ -127,5 +128,74 @@ header nav ul li .nav-link {
 
 .input-form form input:focus, .input-form form input:hover {
   background: #ebeaea;
+}
+
+.movie-list {
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+}
+
+.movie-grid:nth-child(2n) {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 30px;
+}
+
+.movie-grid:nth-child(3n) {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 30px;
+}
+
+.movie-grid:nth-child(1n) {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 30px;
+}
+
+.movie {
+  height: 100%;
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 500px;
+  background: #f3f3f3;
+  border: 1px solid #e3e3e3;
+  width: 350px;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.movie:hover {
+  background: #ebeaea;
+}
+
+.movie .background {
+  height: 94%;
+  width: 90%;
 }
 /*# sourceMappingURL=style.css.map */
