--- a/src/style/style.css
+++ b/src/style/style.css
@@ -47,6 +47,11 @@ header nav .logo-wrapp {
   font-size: 24px;
 }
 
+header nav .logo-wrapp .logo {
+  text-decoration: none;
+  color: #000;
+}
+
 header nav ul {
   -webkit-box-flex: 3;
       -ms-flex: 3;
@@ -75,7 +80,7 @@ header nav ul li .nav-link {
 
 .content {
   width: 100%;
-  min-height: 100vh;
+  min-height: 92vh;
   background: #fafafa;
 }
 
@@ -258,6 +263,7 @@ header nav ul li .nav-link {
   margin-top: 25px;
   outline: none;
   font-weight: bold;
+  text-decoration: none;
 }
 
 .movie-imdb-page .movie-page-heading .movie-page-poster-container .movie-poster-btns-container .save-btn i {
@@ -293,7 +299,7 @@ header nav ul li .nav-link {
 }
 
 .movie-imdb-page .movie-page-heading .movie-page-info-container .movie-page-info-plot-container {
-  height: 35%;
+  height: 32%;
   background: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -310,5 +316,31 @@ header nav ul li .nav-link {
 
 .awards {
   margin-top: 20px;
+}
+
+.development-page {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 92vh;
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.nav-btn {
+  height: 40px;
+  width: 120px;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  background: #1523e0;
+  color: #fff;
+  font-weight: bold;
 }
 /*# sourceMappingURL=style.css.map */
