--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -229,7 +229,7 @@ header {
                 height: 32%;
                 background: 100%;
                 display: flex;
-                align-items: flex-end;
+                align-items: center;
             }
         }
     }
