--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -304,9 +304,9 @@ header nav ul li .nav-link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .movie-imdb-page .movie-page-footer {
