--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -343,4 +343,24 @@ header nav ul li .nav-link {
   color: #fff;
   font-weight: bold;
 }
+
+.wathclists-page {
+  height: 92vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.watchlist-thumbnail {
+  height: 140px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 50px;
+}
 /*# sourceMappingURL=style.css.map */
