--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -274,4 +274,6 @@ header {
     width: 100%;
     display: flex;
     margin-top: 50px;
+    background: #fff;
+    box-shadow: 3px 5px 5px #fafafa;
 }
