--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -66,8 +66,8 @@ header {
 
 .content {
     width: 100%;
-    min-height: 92vh;
     background: #fafafa;
+    min-height: 92vh;
 }
 
 .input-form-gap {
@@ -264,16 +264,61 @@ header {
 }
 
 .wathclists-page {
-    height: 92vh;
+    min-height: 92vh;
     display: flex;
     flex-direction: column;
 }
 
-.watchlist-thumbnail {
-    height: 140px;
+.watchlist-thumbnail-container {
+    height: 270px;
     width: 100%;
     display: flex;
-    margin-top: 50px;
-    background: #fff;
-    box-shadow: 3px 5px 5px #fafafa;
+    flex-direction: column;
+    box-shadow: 10px 5px 5px #f3f3f3;
+    margin-bottom: 40px;
+
+    .watchlist-thumbnail-header {
+        height: 70px;
+        width: 100%;
+        display: flex;
+
+        .watchlist-thumbnail-header-title {
+            flex: 1;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+
+            p {
+                text-transform: capitalize;
+                font-size: 24px;
+                font-weight: bold;
+            }
+        }
+
+        .watchlist-thumbnail-header-date {
+            flex: 1;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+
+            p {
+                font-size: 16px;
+            }
+        }
+    }
+
+    .watchlist-thumbnail {
+        height: 200px;
+        width: 100%;
+        background: #fff;
+        display: flex;
+    }
+}
+
+.watchlist-preview {
+    height: 200px;
+
+    img {
+        height: 200px;
+    }
 }
