--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -300,13 +300,17 @@ header nav ul li .nav-link {
 
 .movie-imdb-page .movie-page-heading .movie-page-info-container .movie-page-info-plot-container {
   height: 32%;
-  background: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.movie-imdb-page .movie-page-heading .movie-page-info-container .movie-page-info-plot-container p {
+  background: #f3f3f3;
+  padding: 7px;
 }
 
 .movie-imdb-page .movie-page-footer {
